--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
+    "connect-mongo": "^2.0.1",
     "country-list": "^2.0.0",
     "csurf": "^1.9.0",
     "dotenv": "^6.1.0",
