--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "watch": "jest --watch",
     "babel": "babel src --out-dir lib",
-    "bundle": "parcel build ./lib/public/scripts/bundle.js --experimental-scope-hoisting",
+    "bundle": "parcel build ./src/public/scripts/bundle.jsx --experimental-scope-hoisting",
     "build": "npm run babel && npm run bundle",
     "start": "npm run build && node server.js",
     "db": "mongod --port 27017 --dbpath=./data",
@@ -28,6 +28,7 @@
     "esm": "^3.0.84",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "express-static-gzip": "^1.1.3",
     "faker": "^4.1.0",
     "helmet": "^3.15.0",
     "history": "^4.7.2",
@@ -65,6 +66,8 @@
     "flow-bin": "^0.82.0",
     "jest": "^23.6.0",
     "parcel-bundler": "^1.10.3",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "parcel-plugin-compress": "^1.0.6",
     "prettier": "^1.15.1",
     "regenerator-runtime": "^0.12.1",
     "sass": "^1.15.1",
