Replace @babel/polyfill with only regenerator-runtime and use locally hosted files instead of CDN

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
   "presets": [
     ["@babel/preset-env", {
+      "targets": "> 0.25%, not dead",
       "modules": false,
-      "useBuiltIns": "entry"
+      "useBuiltIns": "usage"
     }],
     "@babel/preset-flow",
     "@babel/preset-react"
