--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "faker": "^4.1.0",
     "helmet": "^3.15.0",
     "history": "^4.7.2",
+    "imagemin": "^6.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^6.0.0",
     "mongoose": "^5.3.10",
     "mongoose-delete": "^0.4.0",
     "multer": "^1.4.1",
