--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "scripts": {
     "test": "jest",
     "watch": "jest --watch",
-    "babel": "babel src --out-dir lib",
-    "bundle": "parcel build ./src/public/scripts/bundle.jsx --experimental-scope-hoisting",
-    "build": "npm run sass && npm run babel && npm run bundle",
+    "babel": "babel src --out-dir lib --copy-files",
+    "bundle": "parcel build ./src/public/index.html --experimental-scope-hoisting --public-url ./dist/",
+    "build": "npm run babel && npm run bundle",
     "start": "npm run build && node server.js",
-    "db": "mongod --port 27017 --dbpath=./data",
-    "sass": "sass ./src/public/style/main.scss ./public/style/main.css"
+    "db": "mongod --port 27017 --dbpath=./data"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
+    "bootstrap": "^4.1.3",
     "compression": "^1.7.3",
     "connect-mongo": "^2.0.1",
     "country-list": "^2.0.0",
@@ -35,6 +36,7 @@
     "imagemin": "^6.0.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.0",
+    "jquery": "^3.3.1",
     "mongoose": "^5.3.10",
     "mongoose-delete": "^0.4.0",
     "multer": "^1.4.1",
@@ -47,7 +49,8 @@
     "react-dom": "^16.6.1",
     "react-stripe-elements": "^2.0.1",
     "regenerator-runtime": "^0.12.1",
-    "stripe": "^6.13.0"
+    "stripe": "^6.13.0",
+    "through2-map": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
