--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   },
   "plugins": [
     "jest",
-    "flowtype"
+    "flowtype",
+    "react-hooks"
   ],
   "extends": [
     "airbnb",
@@ -15,7 +16,8 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+    "react-hooks/rules-of-hooks": "error"
     // "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
