--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
     }],
     "@babel/preset-flow",
     "@babel/preset-react"
-  ]
+  ],
+  "plugins": ["@babel/plugin-syntax-dynamic-import"]
 }
 
 //   "plugins": ["@babel/plugin-syntax-dynamic-import"],
